# RoboGardener

./: .gitmodules  CMakeLists.txt  README.md  farmbot_description.urdf  frames_2024-11-20_19.02.18.gv  frames_2024-12-08_10.17.21.gv  frames_2024-12-08_10.26.06.gv  frames_2024-12-08_10.28.27.gv  package.xml  robot_description.urdf  setup.cfg  setup.py
config/: robogardner_config.rviz
description/: CMakeLists.txt  batmobil_config.rviz  robo.urdf.xacro  robogardner_config.rviz  ros2_control.xacro
description/gazebo_sim/: batmobil_gz.config  batmobil_gz.urdf  batmobil_world.sdf  building_robot.sdf  empty_world.sdf
description/launch/: batmobil_gazebo.launch.py  batmobil_view.launch.py  rsp.launch.py  view_robot.launch.py
description/launch/log/: latest_list
description/urdf/: base_link.urdf  batmobil.urdf  core_model.xacro  gz_control.xacro  robo_body.urdf
install/: local_setup.sh  setup.sh
launch/: rsp.launch.py  sim_gz.launch.py  view_robot.launch.py
log/: latest_build  latest_list
model/: CMakeLists.txt
model/config/: batmobil_config.rviz  gz_bridge.yaml  twist_mux.yaml
model/description/: core_model.xacro  gz_control.xacro  materials.xacro  robo.urdf.xacro
model/launch/: batmobil_view.launch.py  model_motor.launch.py  rsp.launch.py  sim_gz.launch.py
old/: Dockerfile  base_link.urdf  batmobil.urdf
old/tryout/: farmbot.gv  farmbot_description.urdf.xacro
report/: gazebo_install.fdb_latexmk  gazebo_install.fls  report.fdb_latexmk  report.fls  report.tex
report/ZHAW thesis template/: main.bbl  main.tex  preamble.tex
report/report/: main.aux  (+10 more)
(+143 files in other folders)
